# led-frame

./: .gitignore  .gitmodules  CMakeLists.txt  about.cpp  about.h  about.ui  ambientleddriver.pro  ambientlightsymulation.cpp  ambientlightsymulation.h  atom-factory.cpp  atom-factory.h  capturepart.cpp  capturepart.h  capturethread.cpp  capturethread.h  cflags.pri  cmake_rpi3.sh  cmake_rpi4.sh  config.h.in  doxyfile  doxygen.sh  led-configuration-widget.cpp  led-configuration-widget.h  led-configuration-widget.ui  led-frame.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make_rpi3.sh  project.doxy  qml.qrc  serialbackend.cpp  serialbackend.h
bench/: main.cpp
classes/: alc-color-correction.cpp  alc-color-correction.h  alc-color-samples.cpp  alc-color-samples.h  alc-led-strip-configuration.cpp  alc-led-strip-configuration.h  alc-runtime-sync.cpp  alc-runtime-sync.h  alc-safe-threading.cpp  alc-safe-threading.h  alc-settings.cpp  alc-settings.h  alc-strip-configuration.cpp  alc-strip-configuration.h  alc-weather-color-correction.cpp  alc-weather-color-correction.h  color-samples.cpp  color-samples.h
components/painters/: wave-paint-engine.cpp  wave-paint-engine.h
components/widgets/: decorated-dialog.cpp  decorated-dialog.h
connector/: alc-device-manager.cpp  alc-device-manager.h  alc-device-thread.cpp  alc-device-thread.h  alc-receiver.cpp  alc-receiver.h  alcdevicemanager.cpp  alcdevicemanager.h  alcdevicethread.cpp  alcdevicethread.h
core/: consts.h  debug.h  types.h
core/abstracts/: abstract-corrector-attach.cpp  abstract-corrector-attach.h  abstract-corrector-manager.cpp  abstract-corrector-manager.h  abstract-corrector.cpp  abstract-corrector.h  abstract-emitter-manager.cpp  abstract-emitter-manager.h  abstract-emitter.cpp  abstract-emitter.h  abstract-menu.cpp  abstract-menu.h  abstract-receiver-manager.cpp  abstract-receiver-manager.h  abstract-receiver.cpp  abstract-receiver.h
core/containers/: abstract-container.cpp  abstract-container.h  ambient-device-info-container.cpp  ambient-device-info-container.h  application-info-container.cpp  application-info-container.h  color-correction-container.cpp  color-correction-container.h  color-scanline-container.cpp  color-scanline-container.h  corrector-container.cpp  corrector-container.h  device-config-container.cpp  device-config-container.h  device-info-container.cpp  device-info-container.h  led-ribbon-config-container.cpp  led-ribbon-config-container.h  led-strip-info-container.cpp  led-strip-info-container.h
core/correctors/: brightness-corrector.cpp  brightness-corrector.h  color-enhancer-corrector.cpp  color-enhancer-corrector.h  rgb-channel-corrector.cpp  rgb-channel-corrector.h
core/devices/: device-manager.cpp  device-manager.h  device-port.cpp  device-port.h  device-thread.cpp  device-thread.h  led-frame-device.cpp  led-frame-device.h
core/emitters/: animation-emitter.cpp  animation-emitter.h  color-emitter.cpp  color-emitter.h  emitter-manager.cpp  emitter-manager.h  image-emitter.cpp  image-emitter.h  screen-emitter.cpp  screen-emitter.h  test-emitter.cpp  test-emitter.h
core/enums/: animation-variant.h  color-format-enum.cpp  color-format-enum.h  color-type-enum.cpp  direction.h  (+16 more)
correctors/: alc-audio-color-correction.cpp  alc-audio-color-correction.h  alc-color-correction-manager.cpp  alc-color-correction-manager.h  alc-color-correction-values.h  alc-color-correction.cpp  alc-color-correction.h  alc-global-color-correction.cpp  alc-global-color-correction.h  alc-weather-color-correction.cpp  alc-weather-color-correction.h
dialogs/: alc-about-dialog.cpp  alc-about-dialog.h  alc-about-dialog.ui  alc-animation-configure-dialog.cpp  alc-animation-configure-dialog.h  alc-animation-configure-dialog.ui  alc-screen-configure-dialog.cpp  alc-screen-configure-dialog.h  alc-screen-configure-dialog.ui  alc-strip-configurator-dialog.cpp  alc-strip-configurator-dialog.h  alc-strip-configurator-dialog.ui
documentation/: doxygen.sh  project.doxy
effects/: audioinput.cpp  audioinput.h
emitters/: alc-animation-emitter.cpp  alc-animation-emitter.h  alc-color-emitter.cpp  alc-color-emitter.h  alc-emitter.cpp  alc-emitter.h  alc-image-emitter.cpp  alc-image-emitter.h  alc-screen-emitter.cpp  alc-screen-emitter.h  animation-color-emitter.cpp  animation-color-emitter.h  animationcoloremitter.cpp  animationcoloremitter.h  blackhole-color-emitter.cpp  blackhole-color-emitter.h  blackholecoloremitter.cpp  blackholecoloremitter.h  color-emitter.cpp  color-emitter.h  coloremitter.cpp  coloremitter.h  image-color-emitter.cpp  image-color-emitter.h  imagecoloremitter.cpp  imagecoloremitter.h  plain-color-emitter.cpp  plain-color-emitter.h  screen-capture-color-emitter.cpp  screen-capture-color-emitter.h  screencapturecoloremitter.cpp  screencapturecoloremitter.h  solidcoloremitter.cpp  solidcoloremitter.h
managers/: alc-device-manager.cpp  alc-device-manager.h  alc-emitter-manager.cpp  alc-emitter-manager.h  alc-led-strip-manager.cpp  alc-led-strip-manager.h  alc-screen-manager.cpp  alc-screen-manager.h
mobile/: CMakeLists.txt
mobile/js/: .clang-format  functions.js
qml/: LedAmbient.qml  Monitor.qml  Scene.qml  main.qml
resources/: resource.qrc
systemd/: led-frame.service
ut/: corrector-tests.cpp  image-block-processing-tests.cpp  x11-tests.cpp
widgets/: alc-color-correction-widget.cpp  alc-color-correction-widget.h  alc-color-correction-widget.ui  alc-device-widget.cpp  alc-device-widget.h  alc-device-widget.ui  alc-devices-widget.cpp  alc-devices-widget.h  alc-devices-widget.ui  alc-emitter-widget.cpp  alc-emitter-widget.h  alc-emitters-widget.cpp  alc-emitters-widget.h  alc-emitters-widget.ui  alc-led-configuration-widget.cpp  alc-led-configuration-widget.h  alc-led-configuration-widget.ui  alc-screen-widget.cpp  alc-screen-widget.h  alc-screen-widget.ui  alc-screens-widget.cpp  alc-screens-widget.h  alc-screens-widget.ui  alc-selections-widget.cpp  alc-selections-widget.h  alc-selections-widget.ui  alc-symulation-widget.cpp  alc-symulation-widget.h
wiimotedev/: consts.h  deviceevents.h
(+222 files in other folders)
